# goit-ds-hw-03

./: cats.json  config.ini  connect.py  main.py  models.py  pyproject.toml  seed.py
Task_2/: authors.json  config1.ini  connect1.py  models.py  scrape_authors.py  scrape_quotes.py  seeds.py
